# ImageProcessor

./: CMakeLists.txt  image_processor.cpp
lib/cmd/: parser.cpp  parser.h
lib/common/: bmp.cpp  bmp.h  image.cpp  image.h
lib/filters/: crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.cpp  filter.h  filter_handler.cpp  filter_handler.h  gaussian_blur.cpp  gaussian_blur.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  oil_painting.cpp  oil_painting.h  sharpening.cpp  sharpening.h
lib/tests/: test.cpp
